[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Niklas Asp <niklas.asp.2@consultant.volvo.com>"]
readme = "README.md"
packages = [{include = "2023"},
{include = "2021/**/*"},
{include = "2020"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
